# MetalShaderConverterBinary

./: CMakeLists.txt  README.md
include/metal_irconverter_runtime/: metal_irconverter_runtime.h
